--- a/index.html
+++ b/index.html
@@ -14,37 +14,39 @@
 </head>
 
 <body>
-    <h1>Search Destinations, Attractions, Accommodation and More ! Right Here</h1>
+    <div class="header">
+        <h1>Search Destinations, Attractions, Accommodation and More ! Right Here</h1>
+    </div>
     <div id="pac-container">
 
-        <div>
-            <input id="pac-input" type="text" placeholder="Enter a location">
-            <div id="type-selector" class="pac-controls">
-                <input type="radio" name="type" id="changetype-all" checked="checked">
-                <label for="changetype-all">All</label>
+        <input id="pac-input" type="text" placeholder="Enter a location">
+        <div id="type-selector" class="pac-controls">
+            <input type="radio" name="type" id="changetype-all" checked="checked">
+            <label for="changetype-all">All</label>
 
-                <input type="radio" name="type" id="changetype-establishment">
-                <label for="changetype-establishment">Establishments</label>
+            <input type="radio" name="type" id="changetype-establishment">
+            <label for="changetype-establishment">Establishments</label>
 
-                <input type="radio" name="type" id="changetype-address">
-                <label for="changetype-address">Addresses</label>
+            <input type="radio" name="type" id="changetype-address">
+            <label for="changetype-address">Addresses</label>
 
-                <input type="radio" name="type" id="changetype-geocode">
-                <label for="changetype-geocode">Geocodes</label>
-            </div>
-            <div id="strict-bounds-selector" class="pac-controls">
-                <input type="checkbox" id="use-strict-bounds" value="">
-                <label for="use-strict-bounds">Strict Bounds</label>
-            </div>
-            <div id="reset" class="pac-controls">
-                <input type="button" id="resetbtn" value="Reset" onclick="reset();">
-            </div>
-
+            <input type="radio" name="type" id="changetype-geocode">
+            <label for="changetype-geocode">Geocodes</label>
+        </div>
+        <div id="strict-bounds-selector" class="pac-controls">
+            <input type="checkbox" id="use-strict-bounds" value="">
+            <label for="use-strict-bounds">Strict Bounds</label>
+        </div>
+        <div id="reset" class="pac-controls">
+            <input class="btn" type="button" id="resetbtn" value="Reset" onclick="reset();">
+            <!--input class="btn" type="button" id="newloc" value="Search This Location" onclick="thisloc();"-->
         </div>
 
     </div>
 
-    <div id="map"></div>
+    <div id="map">
+        <p id="location"></p>
+    </div>
 
     <div id="infowindow-content">
         <img src="" width="16" height="16" id="place-icon">
@@ -52,6 +54,9 @@
         <span id="place-address"></span>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiY25skuNFMKYh6DzS409lPN8Kz6tlgPA&libraries=places&callback=initMap" async defer></script>
+    <footer>
+        &copy Humbleafrica 2018
+    </footer>
 </body>
 
 </html>
